WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161834
Fix more URLParser quirks
https://bugs.webkit.org/show_bug.cgi?id=161834
Summary
Fix more URLParser quirks
Alex Christensen
Reported
2016-09-09 19:49:19 PDT
Fix more URLParser quirks
Attachments
Patch
(4.16 KB, patch)
2016-09-09 19:49 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(5.19 KB, patch)
2016-09-09 22:34 PDT
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-09 19:49:55 PDT
Created
attachment 288479
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-09 19:52:32 PDT
Attachment 288479
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3
2016-09-09 22:34:15 PDT
Created
attachment 288481
[details]
Patch
Alex Christensen
Comment 4
2016-09-12 11:12:42 PDT
http://trac.webkit.org/changeset/205813
Alex Christensen
Comment 5
2016-10-04 07:47:13 PDT
I guess the spec does say to always go to "special authority ignore slashes state" where '\' is accepted, possibly with a syntax violation. The only reason I needed to do anything special is because of my serialize-as-I-parse implementation. I don't think the spec needs to be changed here. I'll remove my comment. I do think the syntax violations are an implementation detail and shouldn't be in the spec. There are a few places where the spec has mistakes in how it reports syntax violations, notably in the ipv4 address parser. That's a different issue, though
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug